CMakeLists that work on linux with SFML library installed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,12 @@ cmake_minimum_required(VERSION 3.1)
 
 project(IcyTower)
 
+## If you want to link SFML statically
+# set(SFML_STATIC_LIBRARIES TRUE)
 
+## In most cases better set in the CMake cache
+# set(SFML_DIR "<sfml root prefix>/lib/cmake/SFML")
 
-include(FetchContent)
-FetchContent_Declare(SFML
-    GIT_REPOSITORY https://github.com/SFML/SFML.git
-    GIT_TAG 2.6.x)
-FetchContent_MakeAvailable(SFML)
-
-
+find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
 add_executable(IcyTower src/main.cpp src/Player.cpp src/Player.h src/Tile.h src/Tile.cpp)
-target_link_libraries(IcyTower PRIVATE sfml-graphics sfml-audio)
+target_link_libraries(IcyTower sfml-graphics sfml-audio)
